crates/crates_io_cargo_toml/tests/snapshots/parse__opt_level.snap
---
source: crates/crates_io_cargo_toml/tests/parse.rs
expression: m
---
Manifest {
    package: Some(
        Package {
            name: "byteorder",
            edition: None,
            version: Some(
                Local(
                    "1.2.3",
                ),
            ),
            build: None,
            workspace: None,
            authors: Some(
                Local(
                    [
                        "Andrew Gallant <jamslam@gmail.com>",
                    ],
                ),
            ),
            links: None,
            description: Some(
                Local(
                    "Library for reading/writing numbers in big-endian and little-endian.",
                ),
            ),
            homepage: Some(
                Local(
                    "https://github.com/BurntSushi/byteorder",
                ),
            ),
            documentation: Some(
                Local(
                    "https://docs.rs/byteorder",
                ),
            ),
            readme: Some(
                Local(
                    String(
                        "README.md",
                    ),
                ),
            ),
            keywords: Some(
                Local(
                    [
                        "byte",
                        "endian",
                        "big-endian",
                        "little-endian",
                        "binary",
                    ],
                ),
            ),
            categories: Some(
                Local(
                    [
                        "encoding",
                        "parsing",
                    ],
                ),
            ),
            license: Some(
                Local(
                    "Unlicense/MIT",
                ),
            ),
            license_file: None,
            repository: Some(
                Local(
                    "https://github.com/BurntSushi/byteorder",
                ),
            ),
            metadata: None,
            rust_version: None,
            exclude: None,
            include: None,
            default_run: None,
            autolib: None,
            autobins: None,
            autoexamples: None,
            autotests: None,
            autobenches: None,
            publish: Some(
                Local(
                    Flag(
                        false,
                    ),
                ),
            ),
            resolver: None,
        },
    ),
    cargo_features: None,
    workspace: None,
    dependencies: None,
    dev_dependencies: Some(
        {
            "quickcheck": Detailed(
                DependencyDetail {
                    version: Some(
                        "0.6",
                    ),
                    registry: None,
                    registry_index: None,
                    path: None,
                    git: None,
                    branch: None,
                    tag: None,
                    rev: None,
                    features: None,
                    optional: None,
                    default_features: Some(
                        false,
                    ),
                    package: None,
                },
            ),
            "rand": Detailed(
                DependencyDetail {
                    version: Some(
                        "0.4",
                    ),
                    registry: None,
                    registry_index: None,
                    path: None,
                    git: None,
                    branch: None,
                    tag: None,
                    rev: None,
                    features: None,
                    optional: None,
                    default_features: None,
                    package: None,
                },
            ),
        },
    ),
    build_dependencies: None,
    target: None,
    features: Some(
        {
            "default": [
                "std",
            ],
            "i128": [],
            "std": [],
        },
    ),
    bin: [],
    bench: [],
    test: [],
    example: [],
    patch: Some(
        {
            "crates-io": {
                "rand": Detailed(
                    DependencyDetail {
                        version: None,
                        registry: None,
                        registry_index: None,
                        path: None,
                        git: None,
                        branch: None,
                        tag: None,
                        rev: None,
                        features: None,
                        optional: None,
                        default_features: Some(
                            false,
                        ),
                        package: None,
                    },
                ),
            },
        },
    ),
    lib: Some(
        Product {
            path: None,
            name: Some(
                "byteorder",
            ),
            test: true,
            doctest: true,
            bench: false,
            doc: true,
            plugin: false,
            proc_macro: false,
            harness: true,
            edition: None,
            required_features: [],
            crate_type: None,
        },
    ),
    profile: Some(
        Profiles {
            release: None,
            dev: None,
            test: None,
            bench: Some(
                Profile {
                    opt_level: Some(
                        Integer(
                            3,
                        ),
                    ),
                    debug: None,
                    rpath: None,
                    inherits: None,
                    lto: None,
                    debug_assertions: None,
                    codegen_units: None,
                    panic: None,
                    incremental: None,
                    overflow_checks: None,
                    strip: None,
                    package: {},
                    split_debuginfo: Some(
                        "unpacked",
                    ),
                    build_override: None,
                },
            ),
            doc: None,
            custom: {
                "my-custom": Profile {
                    opt_level: Some(
                        Integer(
                            2,
                        ),
                    ),
                    debug: None,
                    rpath: None,
                    inherits: None,
                    lto: None,
                    debug_assertions: None,
                    codegen_units: None,
                    panic: None,
                    incremental: None,
                    overflow_checks: None,
                    strip: None,
                    package: {},
                    split_debuginfo: None,
                    build_override: None,
                },
            },
        },
    ),
}
